--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.32.0
-pandas==2.1.4
-numpy==1.26.2
-matplotlib==3.8.2
-seaborn==0.13.0
-mlxtend==0.23.0
+streamlit>=1.32.0
+pandas>=2.1.4
+numpy>=1.26.2
+matplotlib>=3.8.2
+seaborn>=0.13.0
+mlxtend>=0.23.0
